--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 DB/Monsters/dnd_monsters_full/dnd_monsters_list_selected.csv
 DB/Monsters/dnd_monsters_full/dnd_monsters_list.csv
 .VSCodeCounter/
+.vscode/settings.json
